--- a/pages/address/address.less
+++ b/pages/address/address.less
@@ -1,15 +1,38 @@
+page{
+    background-color: #dfdfdf;
+}
 .revice_address_row{
-      .user_info_row{
-          display: flex;
-          padding: 40rpx;
-          .user_info{
-              flex: 5;
-          }
-          .user_phone{
-              flex: 3;
-              text-align: right;
-          }
-      }
+    background-color: #fff;
+    .revice_address{
+        .user_info_row{
+            padding: 20rpx;
+            border-top: 1px solid #dfdfdf;
+            .user_addresss{
+                font-size: 35rpx;
+                font-weight: 600;
+            }
+            .user_main1{
+                display: flex;
+                font-weight: 550;
+                .user_name{
+                    margin-right: 20rpx;
+                }
+                .user_phone{}
+            }
+            .user_edit_row{
+                display: flex;
+                margin-top: 20rpx;
+                .cart_chk_wrap{
+                    display: flex;
+                    .goods_moren{}
+                }
+                .user_main2{
+                    display: flex;
+                    margin-left: 400rpx;
+                }
+            }
+        }
+    }
   }
 
 .footer_tool {
