--- a/pages/vip/index.less
+++ b/pages/vip/index.less
@@ -94,20 +94,17 @@ page{
   position: relative;
   .vip_privilege_main{
     position: absolute;
-    width: 90%;
-    left: 33.33%;
-    transform: translateX(-33.33%);
     top: 260rpx;
     .vip_privilege_name{
       padding: 10rpx;
       font-size: 30rpx;
+      margin-bottom: 30rpx;
     }
     .vip_privilege_kind{
       display: flex;
-      .vip_privilege_type{
-        padding: 10rpx;
-        width: 50%;
-        height: 50%;
+      width: 760rpx;
+      .image{
+        width: 100%;
       }
       
     }
