--- a/pages/order/index.wxss
+++ b/pages/order/index.wxss
@@ -3,10 +3,11 @@
 }
 .order_main .order_item .order_main1_row {
   padding: 15rpx;
-  border-top: 2rpx solid #ccc;
+  border-top: 1rpx solid #ccc;
 }
 .order_main .order_item .order_main1_row .order_time_row {
   display: flex;
+  font-size: 25rpx;
 }
 .order_main .order_item .order_main1_row .order_time_row .order_time_text {
   flex: 1;
@@ -16,6 +17,8 @@
 }
 .order_main .order_item .order_main1_row .order_address_row {
   display: flex;
+  font-size: 25rpx;
+  margin-bottom: 20rpx;
 }
 .order_main .order_item .order_main1_row .order_address_row .order_address_text {
   flex: 1;
@@ -25,7 +28,8 @@
 }
 .order_main .order_item .order_main2_row {
   display: flex;
-  border-bottom: 6rpx solid #ccc;
+  border-bottom: 1rpx solid #ccc;
+  padding: 15rpx;
 }
 .order_main .order_item .order_main2_row .order_img_wrap {
   flex: 1;
@@ -34,14 +38,14 @@
   align-items: center;
 }
 .order_main .order_item .order_main2_row .order_img_wrap image {
-  width: 80%;
+  width: 100%;
+  height: 180rpx;
 }
 .order_main .order_item .order_main2_row .order_no_row {
+  margin-left: 20rpx;
   flex: 3;
+  display: flex;
 }
-.order_main .order_item .order_main2_row .order_no_row .order_on_value {
-  display: -webkit-box;
-  overflow: hidden;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2;
+.order_main .order_item .order_main2_row .order_no_row .order_name_text {
+  margin-right: 20rpx;
 }
