[master] change vip

--- a/pages/vip/index.less
+++ b/pages/vip/index.less
@@ -1,49 +1,49 @@
-page{
-    padding-bottom: 90rpx;
-    background-color: #fff;
+page {
+  padding-bottom: 90rpx;
+  background-color: #fff;
 }
 
-.user_info_wrap{
+.user_info_wrap {
   height: 25vh;
   overflow: hidden;
   position: relative;
-  .user_img_wrap{
+  .user_img_wrap {
     position: relative;
-    .user_bg{
+    .user_bg {
       padding: 10rpx;
       margin-top: 65rpx;
     }
-    .user_info{
+    .user_info {
       position: absolute;
       left: 17.5%;
       transform: translateX(-20%);
       top: 35%;
       display: flex;
-      .user_icon{
+      .user_icon {
         flex: 1.4;
         width: 150rpx;
         height: 130rpx;
         border-radius: 50%;
       }
-      .user_information{
+      .user_information {
         flex: 3;
         margin-left: 30rpx;
-        .user_name{
+        .user_name {
           font-size: 40rpx;
-          color:#fff;
+          color: #fff;
         }
-        .user_vip_type{
+        .user_vip_type {
           font-size: 30rpx;
           color: #fff;
         }
-        .user_date{
+        .user_date {
           font-size: 30rpx;
           color: #fff;
         }
       }
     }
   }
-  .user_btn{
+  .user_btn {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
@@ -56,80 +56,81 @@ page{
   }
 }
 
-.vip_wrap{
+.vip_wrap {
   position: relative;
-  .vip_main{
+  .vip_main {
     position: absolute;
     width: 90%;
     left: 50%;
     transform: translateX(-50%);
     top: 40rpx;
-    .vip_kind{
+    .vip_kind {
       display: flex;
       background-color: #fff;
-      .vip_type{
+      .vip_type {
         flex: 1;
         text-align: center;
         padding: 20rpx 0;
         border: 1rpx solid #ccc;
-        border-radius:10px;
-        .vip_name{
+        border-radius: 10px;
+        .vip_name {
           font-size: 30rpx;
           padding: 10rpx 0;
         }
-        .vip_price{
+        .vip_price {
           font-size: 35rpx;
           color: #eb4450;
           padding: 10rpx 0;
         }
       }
-      .vip_type1{;
+      .vip_type1 {
         margin-left: 10rpx;
       }
     }
   }
 }
+.vip_select_background {
+  background-color: orange;
+}
 
-.vip_privilege{
+.vip_privilege {
   position: relative;
-  .vip_privilege_main{
+  .vip_privilege_main {
     position: absolute;
     top: 260rpx;
-    .vip_privilege_name{
+    .vip_privilege_name {
       padding: 10rpx;
       font-size: 30rpx;
       margin-bottom: 30rpx;
     }
-    .vip_privilege_kind{
+    .vip_privilege_kind {
       display: flex;
       width: 760rpx;
-      .image{
+      .image {
         width: 100%;
       }
-      
     }
-
   }
 }
 
-  .footer_tool {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 90rpx;
-    background-color: #fff;
-    display: flex;
-    border-top: 1rpx solid #ccc;
-    }
-  
-    .order_pay_wrap {
-        flex: 3;
-        background-color: #eb4450;
-        color: #fff;
-        font-size: 32rpx;
-        font-weight: 600;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
+.footer_tool {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 90rpx;
+  background-color: #fff;
+  display: flex;
+  border-top: 1rpx solid #ccc;
+}
+
+.order_pay_wrap {
+  flex: 3;
+  background-color: #eb4450;
+  color: #fff;
+  font-size: 32rpx;
+  font-weight: 600;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
