--- a/pages/address/address.wxml
+++ b/pages/address/address.wxml
@@ -1,6 +1,6 @@
 <!-- 用户收货地址 -->
 <view class="revice_address_row">
-    <view class="revice_address" wx:for="{{addressList}}" wx:key="address_id">
+    <view class="revice_address" wx:for="{{addressList}}" wx:key="{{index}}">
         <!-- 当收货地址 不存在 没有显示-->
         <view wx:if="{{!item.receiver}}"></view>
         <!-- 当收货地址 存在 详细信息显示 -->
@@ -19,9 +19,9 @@
                     <view class="goods_moren">默认地址</view>
                 </view>
                 <view class="user_main2">
-                    <view bindtap="handleItemNumEdit" data-id="" data-operation="" class="num_edit">编辑</view> 
+                    <view bindtap="handleItemNumEdit" data-index="{{index}}" data-operation="" class="num_edit">编辑</view> 
                     <view>丨</view>
-                    <view bindtap="handleItemNumEdit" data-id="" data-operation="" class="num_edit">删除</view>
+                    <view bindtap="deleteItemNum" data-id="{{item.id}}" data-operation="" class="num_edit">删除</view>
                 </view>        
             </view>
         </view>
