--- a/pages/order/index.less
+++ b/pages/order/index.less
@@ -45,10 +45,24 @@
           flex: 3;
           display: flex;
           .order_name_text{
-            margin-right: 20rpx;
+            flex: 1.5;
           }
           .order_on_name {
+            flex: 3;
           }
+          .order_on_status{
+            flex: 1;
+            color: #eb4450;
+          }
+        }
+      }
+      .order_btn{
+        padding: 10rpx 0;
+        .order_btn_wrap{
+          border: 1rpx solid #ccc;
+          width: 180rpx;
+          height: 40rpx;
+          margin-right: 10rpx;
         }
       }
     }
