--- a/pages/vip/index.less
+++ b/pages/vip/index.less
@@ -17,13 +17,14 @@ page {
       position: absolute;
       left: 17.5%;
       transform: translateX(-20%);
-      top: 35%;
+      top: 30%;
       display: flex;
       .user_icon {
         flex: 1.4;
         width: 150rpx;
-        height: 130rpx;
+        height: 160rpx;
         border-radius: 50%;
+        margin-top: 5rpx;
       }
       .user_information {
         flex: 3;
@@ -86,11 +87,12 @@ page {
       .vip_type1 {
         margin-left: 10rpx;
       }
+      .vip_select_background {
+        border: 1rpx solid #FF8000	;
+        background-color: #FFDFBF	;
+      }
     }
   }
-}
-.vip_select_background {
-  background-color: orange;
 }
 
 .vip_privilege {
