--- a/pages/vip/index.wxss
+++ b/pages/vip/index.wxss
@@ -18,14 +18,15 @@ page {
   position: absolute;
   left: 17.5%;
   transform: translateX(-20%);
-  top: 35%;
+  top: 30%;
   display: flex;
 }
 .user_info_wrap .user_img_wrap .user_info .user_icon {
   flex: 1.4;
   width: 150rpx;
-  height: 130rpx;
+  height: 160rpx;
   border-radius: 50%;
+  margin-top: 5rpx;
 }
 .user_info_wrap .user_img_wrap .user_info .user_information {
   flex: 3;
@@ -87,8 +88,9 @@ page {
 .vip_wrap .vip_main .vip_kind .vip_type1 {
   margin-left: 10rpx;
 }
-.vip_select_background {
-  background-color: orange;
+.vip_wrap .vip_main .vip_kind .vip_select_background {
+  border: 1rpx solid #FF8000	;
+  background-color: #FFDFBF	;
 }
 .vip_privilege {
   position: relative;
