--- a/pages/search/index.wxml
+++ b/pages/search/index.wxml
@@ -3,10 +3,10 @@
     <button bindtap="handleCancel" hidden="{{!isFocus}}">取消</button>
 </view>
 <view class="search_content">
-    <navigator url="/pages/goods_detail/index?goods_id={{item.goods_id}}" class="search_item"
+    <navigator url="/pages/goods_detail/index?goods_id={{item.id}}" class="search_item"
     wx:for="{{goods}}"
     wx:key="goods_id"
-    >{{item.goods_name}}</navigator>
+    >{{item.name}}</navigator>
 
 </view>
 
