--- a/pages/Address_information/index.less
+++ b/pages/Address_information/index.less
@@ -3,24 +3,36 @@ page{
 }
 .address_wrap{
     background-color: #fff;
+    font-size: 40rpx;
     .name_title{
+        display: flex;
         padding: 30rpx;
+        border-bottom: 1px solid #ccc;
     }
     .phone_title{
+        display: flex;
         padding: 30rpx;
+        border-bottom: 1px solid #ccc;
     }
     .region_title{
+        display: flex;
         padding: 30rpx;
+        border-bottom: 1px solid #ccc;
+        .picker{
+            
+        }
     }
     .address_title{
+        display: flex;
         padding: 30rpx;
+        border-bottom: 1px solid #ccc;
     }
     .code_title{
+        display: flex;
         padding: 30rpx;
     }
     input{
-        height: 100%;
-        padding: 30rpx;
+        margin-top: 8rpx;
     }
 }
 
