[master] fix the issue

--- a/pages/Appointment/index.wxml
+++ b/pages/Appointment/index.wxml
@@ -2,18 +2,18 @@
 <view class="AppointmentMain">
     <!-- 书名 -->
     <view class="AppointmentName">
-    <input  placeholder="请输入书名，我们会为您尽快准备书本" bindinput="handleInput"></input>
+    <input  placeholder="请输入书名，我们会为您尽快准备书本" bindinput="handleInput" data-text="name" value="{{name}}"></input>
     </view>
 
     <!-- 作者 -->
     <view class="AppointmentAuthor">
-    <input placeholder="请输入作者" bindinput="handleInput"></input>
+    <input placeholder="请输入作者" bindinput="handleInput" data-text="author" value="{{author}}"></input>
     </view>
 
     <!-- 出版社 -->
     <view class="AppointmentPublishingHouse">
-    <input placeholder="请输入出版社" bindinput="handleInput"></input>
+    <input placeholder="请输入出版社" bindinput="handleInput" data-text="press" value="{{press}}"></input>
     </view>
 
-    <button class="AppointmentButton" >立即提交</button>
+    <button class="AppointmentButton" bindtap="orderbook">立即提交</button>
 </view>
