--- a/pages/Captcha/index.wxml
+++ b/pages/Captcha/index.wxml
@@ -1,12 +1,13 @@
 <!-- 手机号验证码登录 -->
 <view class="phoneMain">
     <view class="phoneNum">
-    <input  placeholder="请输入您的手机号" bindinput="handleInput"></input>
+    <input  placeholder="请输入您的手机号" bindinput="handleInput" data-text="phone" value="{{phone}}"></input>
     </view>
 
     <!-- 获取验证码 -->
     <view class="phoneCaptchaNum">
-    <input class="phoneCaptcha"placeholder="请输入您的验证码" bindinput="handleInput"></input>
-    <button class="phoneCaptchaButton" >获取验证码</button>
+    <input class="phoneCaptcha"placeholder="请输入您的验证码" bindinput="handleInput" data-text="code" value="{{code}}"></input>
+    <button class="phoneCaptchaButton" bindtap="getSmsCode">获取验证码</button>
     </view>
+    <button class="phoneCaptchaButton" bindtap="authenticate">认证</button>
 </view>
